--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "xss-clean",
   "version": "0.1.1",
   "description": "middleware to sanitize user input",
-  "author": "Jason Maurer <j@maur.co>",
+  "author": "Jason Maurer",
   "license": "MIT",
-  "homepage": "https://github.com/jsonmaur/xss-clean",
+  "homepage": "https://github.com/jsonmaur/xss-clean#readme",
   "repository": {
     "type": "git",
     "url": "https://github.com/jsonmaur/xss-clean"
@@ -25,27 +25,29 @@
     "security",
     "protect"
   ],
-  "main": "./lib",
+  "files": [
+    "lib/",
+    "README.md"
+  ],
+  "main": "lib/index.js",
   "scripts": {
-    "lint": "eslint src",
-    "prebuild": "rm -rf lib",
-    "build": "babel src -d lib -s --no-comments",
-    "pretest": "npm outdated && npm run lint",
-    "test": "istanbul cover tape -- tests/**/*.js | tap-spec",
-    "coveralls": "cat coverage/lcov.info | node_modules/coveralls/bin/coveralls.js",
+    "lint": "exlint src test",
+    "pretest": "rm -rf .nyc_output coverage && npm run lint",
+    "test": "cross-env NODE_ENV=testing nyc ava -a",
+    "posttest": "nyc report -r=lcov",
+    "coveralls": "cat coverage/lcov.info | coveralls",
+    "build": "rm -rf lib && babel src -d lib -s --no-comments",
     "prepublish": "npm run build"
   },
   "devDependencies": {
+    "ava": "0.14.0",
     "babel-cli": "6.5.1",
-    "babel-eslint": "5.0.0",
     "babel-preset-es2015": "6.5.0",
+    "babel-register": "6.7.2",
     "coveralls": "2.11.6",
-    "eslint": "2.2.0",
-    "eslint-config-google": "0.4.0",
-    "eslint-config-xo": "0.11.0",
-    "istanbul": "0.4.2",
-    "tap-spec": "4.1.1",
-    "tape": "4.4.0"
+    "cross-env": "1.0.7",
+    "exlint": "0.1.0",
+    "nyc": "6.4.0"
   },
   "dependencies": {
     "xss-filters": "1.2.6"
@@ -53,6 +55,19 @@
   "babel": {
     "presets": [
       "es2015"
+    ]
+  },
+  "ava": {
+    "require": [
+      "babel-register"
+    ]
+  },
+  "nyc": {
+    "require": [
+      "babel-register"
+    ],
+    "include": [
+      "src"
     ]
   }
 }
